2009-09-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix bug in SL macro expansion.
	
	* tools/lib/t-pppalpha/slimpl.m4: Shell-quote the thread function
	name when calling Python, so as to avoid strangeness with names of
	the form "foo->bar" etc.

2009-09-28  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend the graphics output library.
	
	* lib/include/svp/gfx.h: Add support for pixel output at offset
	from start of framebuffer.

2009-09-27  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Small optimization in MT-alpha code generation.

	* tools/bin/spp (pppalpha.addswchll): Properly recognize `sqrt' as
	a long-latency operation.

2009-09-27  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor packaging fix.

	* lib/Makefile.am: Install math headers.
	
	* lib/mtalpha.mk: Distribute math modules.

2009-09-27  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Improve support for C99 math.
	
	* lib/include/cmath.h: Properly define `float_t' and
	`double_t'. Set `math_errhandling' to 0 since there is actually no
	handling implemented.

2009-09-27  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	* tools/bin/slt.in: Compile tests with `-lm'.

2009-09-27  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Add support for C99 math on MT-alpha.

	* lib/include/cfloat.h,
	* lib/include/cmath.h: Declare C99 math.
	
	* lib/src/missing_uclibc_math.c: New.
	
	* lib/src/mtalpha/m/acosf.o,
	* lib/src/mtalpha/m/acoshf.o,
	* lib/src/mtalpha/m/asinf.o,
	* lib/src/mtalpha/m/asinhf.o,
	* lib/src/mtalpha/m/atan2f.o,
	* lib/src/mtalpha/m/atanf.o,
	* lib/src/mtalpha/m/atanhf.o,
	* lib/src/mtalpha/m/cabsf.o,
	* lib/src/mtalpha/m/carg.o,
	* lib/src/mtalpha/m/cargf.o,
	* lib/src/mtalpha/m/cbrtf.o,
	* lib/src/mtalpha/m/ceilf.o,
	* lib/src/mtalpha/m/copysignf.o,
	* lib/src/mtalpha/m/cosf.o,
	* lib/src/mtalpha/m/coshf.o,
	* lib/src/mtalpha/m/e_acos.o,
	* lib/src/mtalpha/m/e_acosh.o,
	* lib/src/mtalpha/m/e_asin.o,
	* lib/src/mtalpha/m/e_atan2.o,
	* lib/src/mtalpha/m/e_atanh.o,
	* lib/src/mtalpha/m/e_cosh.o,