@@ -1,5 +1,17 @@
 2009-09-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>
 
+	Align API for place allocation with documentation.
+
+	Note [sl7] was authored to document the API and introduces the
+	concept of SEP. Ensure this concept exists in the implementation
+	as well. Also, place sharing does not exist yet.
+
+	* lib/include/svp/sep.h,	
+	* lib/src/mtsep.c: Introduce the SEP. Remove support for place
+	sharing.
+	
+2009-09-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>
+
 	Fix bug in SL macro expansion.
 	
 	* tools/lib/t-pppalpha/slimpl.m4: Shell-quote the thread function
